# agg

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  default.nix  demo.cast  flake.nix  pyproject.toml  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI_maturin.yml  build_nix.yml  ci.yml  clippy.yml  publish.yml  release.yml
fonts/: SymbolsNerdFont-LICENSE.txt
src/: asciicast.rs  events.rs  fonts.rs  frames.rs  lib.rs  main.rs  output.rs  renderer.rs  selection.rs  terminal.rs  theme.rs  timeline.rs  vt.rs
src/asciicast/: v1.rs  v2.rs  v3.rs
src/renderer/: fontdue.rs  resvg.rs  swash.rs
src/selection/: spec.rs
themes/: asciinema.css
