[package]
name = "agg"
version = "1.7.0"
authors = ["Marcin Kulik <m@ku1ik.com>"]
edition = "2021"
homepage = "https://docs.asciinema.org/manual/agg/"
repository = "https://github.com/asciinema/agg"
description = "asciinema gif generator"
license = "GPL-3.0-or-later"

# MSRV
rust-version = "1.85.0"

[dependencies]
anyhow = "1"
avt = "0.16.0"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
fontdb = "0.23.0"
fontdue = "0.7"
gifski = "1"
imgref = "1"
log = "0.4"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "rustls", "gzip"] }
resvg = { version = "0.45.1", features = ["text"] }
rgb = "0.8"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
shellexpand = "3.1.0"
tiny-skia = "0.11.4"
usvg = "0.45.1"
