[package]
name = "agg"
version = "1.7.0"
authors = ["Marcin Kulik <m@ku1ik.com>"]
edition = "2021"
homepage = "https://docs.asciinema.org/manual/agg/"
repository = "https://github.com/asciinema/agg"
description = "asciinema gif generator"
license = "GPL-3.0-or-later"

include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/fonts/NotoEmoji-OFL.txt",
    "/fonts/NotoEmoji-Regular.ttf",
    "/fonts/SymbolsNerdFont-LICENSE.txt",
    "/fonts/SymbolsNerdFont-Regular.ttf",
    "/src/**",
]

# MSRV
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.102"
avt = "0.17.0"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
fontdb = "0.23.0"
fontdue = "0.9.3"
gifski = "1.34.0"
imgref = "1.12.1"
log = "0.4.29"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "rustls", "gzip"] }
resvg = { version = "0.45.1", features = ["text"] }
rgb = "0.8.53"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.2"
swash = "0.2.7"
tiny-skia = "0.11.4"
ttf-parser = "0.25.1"
usvg = "0.45.1"
